chromeExtension/hovercraft.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);

.HovercraftTooltip {
    font-family: "Open Sans", sans-serif;
    font-weight: 300;
    font-size: 16px;
    position: absolute;
    z-index: 999999;
    display: table;
}

.HovercraftTooltip div.table-row {
    min-width: 200px;
    display: table-row;
    position: absolute;
    text-align: left;
    width: auto;
    font-size: 1rem;
    line-height: 1.2;
    padding: 10px;
    border-radius: 3px;
    white-space: normal;
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
    transition: all 0.2s ease-out;
    top: -5px;
    left: 50%;
    visibility: visible;
    opacity: 1;
}

.HovercraftTooltip div.table-cell {
    display: table-cell;
    vertical-align: top;
}

.HovercraftTooltips span {
    white-space: nowrap;
}

